<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="13"
        tools:context=".Contoller.SignUpActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewUsernameEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/username"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/editTextUsernameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewUsernameEdit"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/enter_username"
                    android:inputType="textPersonName"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textViewEmailEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextUsernameEdit"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/email"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/editTextEmailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewEmailEdit"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textViewPasswordEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextEmailEdit"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/password"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/editTextPasswordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewPasswordEdit"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textSize="25sp" />

                <Spinner
                    android:id="@+id/roleSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextPasswordEdit"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="25sp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/roleSpinner"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="#BA0000"
                    android:text="@string/save" />

            </RelativeLayout>
        </ScrollView>

    </LinearLayout>
</layout>